fix text overflow

--- a/folder_index.html
+++ b/folder_index.html
@@ -63,7 +63,7 @@ a {
     text-decoration: none;
     color: #555;
     border-radius: 5px;
-    white-space: no-wrap;
+    white-space: nowrap;
     border: 1px solid transparent;
 }
 a:hover {
